# furhaven

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
furhaven/: asgi.py  settings.py  urls.py  wsgi.py
furhaven/management/commands/: wait_for_db.py
nginx/: Dockerfile  nginx.conf
nginx/sites-available/: furhaven.conf
static/: index.html
