[tool.poetry]
name = "furhaven"
version = "0.1.0"
description = "FurHaven - Pet Adoption Platform"
authors = ["Jobet P. Casquejo <jobetcasquejo221@gmail.com>"]
readme = "README.md"
packages = [{include = "furhaven"}]

[tool.poetry.dependencies]
python = "^3.11"
Django = "^5.0.0"
gunicorn = {version = "^21.2.0", optional = true}
psycopg2-binary = "^2.9.9"
whitenoise = {version = "^6.6.0", optional = true}
python-dotenv = "^1.0.0"
django-environ = "^0.11.2"
django-crispy-forms = "^2.1"
crispy-bootstrap5 = "^2023.10"
django-allauth = "^0.58.2"
django-cleanup = "^8.0.0"
pillow = "^10.1.0"

[tool.poetry.extras]
production = ["gunicorn", "whitenoise", "psycopg2-binary"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-django = "^4.7.0"
pytest-cov = "^4.1.0"
black = "^23.11.0"
flake8 = "^6.1.0"
pre-commit = "^3.5.0"
django-debug-toolbar = "^4.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = "E203, E266, E501, W503"
max-complexity = 18
select = "B,C,E,F,W,T4,B9"

[tool.pytest.ini_options]
python_files = ["test_*.py", "tests/*.py"]
DJANGO_SETTINGS_MODULE = "furhaven.settings"
addopts = "--cov=./ --cov-report=term-missing"
testpaths = ["tests"]

[tool.django]
settings = "furhaven.settings"

[tool.django.rest_framework]
DATABASES = { default = "postgresql://postgres:postgres@localhost:5432/furhaven" }

[tool.celery]
broker_url = "redis://localhost:6379/0"
result_backend = "redis://localhost:6379/0"
accept_content = ["json"]
task_serializer = "json"
result_serializer = "json"
timezone = "UTC"
enable_utc = true
